Code cleanup and fixes (#382)
* Rework Soulbound mechanic

Rework Soulbound mechanic to prevent a memory leak if a player disconnects before respawning.

* Move namespaced key location

* Add mending support for the durability mechanic

* Fix customblockdata not being relocated

* Remove redundant snakeyaml from plugin jar

* Add missing relocations

* Update Gradle and Shadow

* Fix project imports

* Code cleanup

* Use apache http for resourcepack instead of java-curl

* Remove * imports

* Bug fixes

Fix error with ItemBuilder and revert changes to readFileToVirtuals